--- a/README
+++ b/README
@@ -4,10 +4,14 @@ Gromit-MPX
 Gromit-MPX is an XInput2 port of the original Gromit and enables
 annotation with several pointers at once.
 
-This port needs an Xinput2-enabled version of GTK! For the time being,
+This port needs an XInput2-enabled version of GTK! For the time being,
 this is available at http://live.gnome.org/GTK%2B/MPX.
 
+Below's the original Gromit README from Simon. Everything said there
+also applies to Gromit-MPX.
+
   Christian Beier <dontmind@freeshell.org>
+
 
 
 Gromit
@@ -71,11 +75,8 @@ possible to erase something with the other end of the (Wacom) pen.
 
 Building:
 
-Gromit is small and lightwight. It needs GTK+ 2.X to build and the Makefile
-is straightforward. No need for autoconf/automake yet  :-)
-Simply type "make" and copy the resulting binary to a convenient place.
-Stripping the binary can reduce its size. I just tested it on
-Linux/XFree86, reports from other platforms are welcome.
+Gromit is small and lightwight. It needs GTK+ 2.X to build.
+Simply type "configure", "make" and "make install".
 
 
 Configuration:
