--- a/TODO
+++ b/TODO
@@ -1,10 +1,6 @@
 
 - device specific hotkey
-  ->  this is really awkward, because i had to duplicate the event 
-      handling in gromit (gdk gives no device information with key 
-      events. and two event checkers running ain't nice: either we
-      miss XI key events or internal gdk events (arrows arent drawn
-      till the end...) so just leave it till gdk gets full XI2.
+  ->  GTK reports GdkDevice of keypress now, fine.
   ->  XGrabDeviceKey for every attached keyboard, have to get the
       XDevice* somehow...
 
