--- a/debian/gromit-mpx.1
+++ b/debian/gromit-mpx.1
@@ -13,18 +13,18 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-Gromit \- Presentation helper to make annotations on screen
+Gromit-MPX \- Presentation helper to make annotations on screen
 .SH SYNOPSIS
-.B gromit
+.B gromit-mpx
 .RI [ options ]
 .br
 .SH DESCRIPTION
-\fBGromit\fP enables you to make annotations on your screen. It can run in
+\fBGromit-MPX\fP enables you to make multi-pointer annotations on your screen. It can run in
 the background and be activated on demand to let you draw over all your
 currently running applications. The drawing will stay on screen as long as you
 want, you can continue to use your applications while the drawing is visible.
 .br
-\fBGromit\fP is XInput-Aware, so if you have a graphic tablet you can
+\fBGromit-MPX\fP is XInput-Aware, so if you have a graphic tablet you can
 draw lines with different strength, color, erase things, etc.
 .br
 Since you typically want to use the program you are demonstrating and
@@ -33,7 +33,7 @@ Gromit is activated by either a hotkey or a repeated invokation of Gromit
 (the latter can e.g. used by other applications or your windowmanager).
 .br
 .SH KEYBOARD CONTROL
-By default, Gromit grabs the "Pause" key (this can be change using the
+By default, Gromit-MPX grabs the "Pause" key (this can be change using the
 "--key" option), making it unavailable to other application. The
 available shortcuts are:
 .TP
@@ -47,20 +47,20 @@ clear screen
 toggle visibility
 .TP
 .B ALT-Pause
-quit Gromit
+quit Gromit-MPX
 .PP
 .SH OPTIONS (STARTUP)
-A short summary of the available commandline arguments for invoking Gromit, see
-below for the options to control an already running Gromit process:
+A short summary of the available commandline arguments for invoking Gromit-MPX, see
+below for the options to control an already running Gromit-MPX process:
 .TP
 .B \-a, \-\-active
-start Gromit and immediately activate it.
+start Gromit-MPX and immediately activate it.
 .TP
 .B \-k <keysym>, \-\-key <keysym>
 will change the key used to grab the mouse. <keysym> can e.g. be
 "Pause", "F12", "Control_R" or "Print". To determine the keysym for
 different keys you can use the \fBxev\fP(1) command. You can specify "none"
-to prevent Gromit from grabbing a key.
+to prevent Gromit-MPX from grabbing a key.
 .TP
 .B \-K <keycode>, \-\-keycode <keycode>
 will change the key used to grab the mouse. Under rare circumstances
@@ -72,10 +72,10 @@ can use the \fBxev\fP(1) command.
 gives some debug output.
 .SH OPTIONS (CONTROL)
 A sort summary of the available commandline arguments to control an already
-running Gromit process, see above for the options available to start Gromit.
+running Gromit-MPX process, see above for the options available to start Gromit-MPX.
 .TP
 .B \-q, \-\-quit
-will cause the main Gromit process to quit.
+will cause the main Gromit-MPX process to quit.
 .TP
 .B \-t, \-\-toggle
 will toggle the grabbing of the cursor.
@@ -86,22 +86,23 @@ will toggle the visibility of the window.
 .B \-c, \-\-clear
 will clear the screen.
 .SH BUGS
-Gromit may drastically slow down your X-Server, especially when you draw
+Gromit-MPX may drastically slow down your X-Server, especially when you draw
 very thin lines. It makes heavily use of the shape extension, which is
 quite expensive if you paint a complex pattern on screen. Especially
 terminal-programs tend to scroll incredibly slow if something is painted
 over their window. There is nothing I can do about this.
 .br
-Gromit partially disables DnD, since it lays a transparent window across
+Gromit-MPX partially disables DnD, since it lays a transparent window across
 the whole screen and everything gets "dropped" to this (invisible)
-window. Gromit tries to minimize this effect: When you clear the screen
+window. Gromit-MPX tries to minimize this effect: When you clear the screen
 the shaped window will be hidden. It will be resurrected, when you want
 to paint something again. However: The window does not hide, if you
 erase everything with the eraser tool, you have to clear the screen
-explicitely with the "gromit --clear" command or hide Gromit with
-"gromit --visibility".
-.SH AUTHOR
+explicitely with the "gromit-mpx --clear" command or hide Gromit-MPX with
+"gromit-mpx --visibility".
+.SH AUTHORS
 Simon Budig <simon@gimp.org>
+Christian Beier <dontmind@freeshell.org>
 .PP
 This manual page was written by Pierre Chifflier <chifflier@cpe.fr> and
 Simon Budig.
