Fix redraw after unhide.
Before, everything was restored with the same colour.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 
-* may get rid of 2 drawing contexts? fix same-color problem after hide?
+* get rid of 2 drawing contexts
 * spot memleaks
 * code cleanup
