--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 
 * make use of compositing + input shape combining
+* don't show annotation on every virtual desktop
 * spot memleaks
 * code cleanup
