--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 
-* Concurrent multi-user operation using GTK3 with Multi-Pointer-X.
-* Drawn annotations do not intercept mouse clicks.
-* Makes use of the Composite extension where available to allow
-  really fast drawing.
+Gromit-MPX 1.0
+   * Concurrent multi-user operation using GTK3 with Multi-Pointer-X.
+   * Drawn annotations do not intercept mouse clicks.
+   * Makes use of the Composite extension where available to allow for
+     really fast drawing.
