--- a/debian/gromit-mpx.1
+++ b/debian/gromit-mpx.1
@@ -1,5 +1,5 @@
 .\"                                      Hey, vim: ft=nroff
-.TH GROMIT 1 "January 16, 2005"
+.TH GROMIT 1 "February 10, 2011"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -25,28 +25,28 @@ currently running applications. The drawing will stay on screen as long as you
 want, you can continue to use your applications while the drawing is visible.
 .br
 \fBGromit-MPX\fP is XInput-Aware, so if you have a graphic tablet you can
-draw lines with different strength, color, erase things, etc.
+draw lines with different strength, colour, erase things, etc.
 .br
 Since you typically want to use the program you are demonstrating and
 highlighting something is a short interruption of you workflow,
-Gromit is activated by either a hotkey or a repeated invokation of Gromit
+Gromit-MPX is activated by either a hotkey or a repeated invokation of Gromit-MPX
 (the latter can e.g. used by other applications or your windowmanager).
 .br
 .SH KEYBOARD CONTROL
-By default, Gromit-MPX grabs the "Pause" key (this can be change using the
+By default, Gromit-MPX grabs the "F9" key (this can be changed using the
 "--key" option), making it unavailable to other application. The
 available shortcuts are:
 .TP
-.B Pause
+.B F9
 toggle painting
 .TP
-.B SHIFT-Pause
+.B SHIFT-F9
 clear screen
 .TP
-.B CTRL-Pause
+.B CTRL-F9
 toggle visibility
 .TP
-.B ALT-Pause
+.B ALT-F9
 quit Gromit-MPX
 .PP
 .SH OPTIONS (STARTUP)
@@ -58,7 +58,7 @@ start Gromit-MPX and immediately activate it.
 .TP
 .B \-k <keysym>, \-\-key <keysym>
 will change the key used to grab the mouse. <keysym> can e.g. be
-"Pause", "F12", "Control_R" or "Print". To determine the keysym for
+"F9", "F12", "Control_R" or "Print". To determine the keysym for
 different keys you can use the \fBxev\fP(1) command. You can specify "none"
 to prevent Gromit-MPX from grabbing a key.
 .TP
@@ -86,23 +86,17 @@ will toggle the visibility of the window.
 .B \-c, \-\-clear
 will clear the screen.
 .SH BUGS
-Gromit-MPX may drastically slow down your X-Server, especially when you draw
-very thin lines. It makes heavily use of the shape extension, which is
+When there is no compositing manager such as Compiz or xcompmgr
+running, Gromit-MPX falls back to a legacy drawing mode. This may
+drastically slow down your X-Server, especially when you draw very
+thin lines. It makes heavy use of the shape extension, which is
 quite expensive if you paint a complex pattern on screen. Especially
-terminal-programs tend to scroll incredibly slow if something is painted
-over their window. There is nothing I can do about this.
-.br
-Gromit-MPX partially disables DnD, since it lays a transparent window across
-the whole screen and everything gets "dropped" to this (invisible)
-window. Gromit-MPX tries to minimize this effect: When you clear the screen
-the shaped window will be hidden. It will be resurrected, when you want
-to paint something again. However: The window does not hide, if you
-erase everything with the eraser tool, you have to clear the screen
-explicitely with the "gromit-mpx --clear" command or hide Gromit-MPX with
-"gromit-mpx --visibility".
+terminal-programs tend to scroll incredibly slow if something is
+painted over their window.
 .SH AUTHORS
 Simon Budig <simon@gimp.org>
 Christian Beier <dontmind@freeshell.org>
 .PP
 This manual page was written by Pierre Chifflier <chifflier@cpe.fr> and
-Simon Budig.
+Simon Budig for the original Gromit and extended for Gromit-MPX by
+Christian Beier.
